--- a/electra1131/app/Base.lproj/Main.storyboard
+++ b/electra1131/app/Base.lproj/Main.storyboard
@@ -24,10 +24,10 @@
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Combined Shape" translatesAutoresizingMaskIntoConstraints="NO" id="tZ9-9J-VWS">
-                                <rect key="frame" x="76" y="110" width="168" height="43"/>
+                                <rect key="frame" x="75.5" y="110" width="168" height="43"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jPt-Se-ZOo">
-                                <rect key="frame" x="53" y="196" width="214" height="106"/>
+                                <rect key="frame" x="52.5" y="196" width="214" height="106"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fB9-4u-Bfa">
                                         <rect key="frame" x="0.0" y="0.0" width="214" height="55"/>
@@ -67,7 +67,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DoH-WZ-oqx">
-                                <rect key="frame" x="22" y="326" width="276" height="32"/>
+                                <rect key="frame" x="21.5" y="326" width="276" height="32"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brought to you by the " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fC-j2-0wp">
                                         <rect key="frame" x="0.0" y="0.0" width="161" height="32"/>
@@ -91,7 +91,7 @@
                                 <rect key="frame" x="0.0" y="368" width="320" height="234"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFy-KQ-Zk5">
-                                        <rect key="frame" x="10" y="45" width="299" height="50"/>
+                                        <rect key="frame" x="9.5" y="45" width="299" height="50"/>
                                         <subviews>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ggt-pB-Zy0">
                                                 <rect key="frame" x="242" y="9.5" width="51" height="31"/>
@@ -126,7 +126,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dbk-ev-Bdv">
-                                        <rect key="frame" x="10" y="105" width="299" height="50"/>
+                                        <rect key="frame" x="9" y="105" width="299" height="50"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NcJ-fY-tUf">
                                                 <rect key="frame" x="0.0" y="0.0" width="142" height="50"/>
@@ -149,7 +149,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ll4-6Q-Yds">
-                                                <rect key="frame" x="158" y="0.0" width="142" height="50"/>
+                                                <rect key="frame" x="157" y="0.0" width="142" height="50"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                 <state key="normal" title="Set Nonce">
@@ -168,12 +168,12 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="NcJ-fY-tUf" firstAttribute="top" secondItem="dbk-ev-Bdv" secondAttribute="top" id="DBf-7b-xWM"/>
-                                            <constraint firstItem="Ll4-6Q-Yds" firstAttribute="leading" secondItem="NcJ-fY-tUf" secondAttribute="trailing" constant="16" id="O57-Zn-UGo"/>
+                                            <constraint firstItem="Ll4-6Q-Yds" firstAttribute="leading" secondItem="NcJ-fY-tUf" secondAttribute="trailing" constant="15" id="O57-Zn-UGo"/>
                                             <constraint firstItem="Ll4-6Q-Yds" firstAttribute="top" secondItem="NcJ-fY-tUf" secondAttribute="top" id="ZG5-VI-IX7"/>
                                             <constraint firstItem="NcJ-fY-tUf" firstAttribute="leading" secondItem="dbk-ev-Bdv" secondAttribute="leading" id="bF0-Sv-RGu"/>
                                             <constraint firstItem="Ll4-6Q-Yds" firstAttribute="firstBaseline" secondItem="NcJ-fY-tUf" secondAttribute="baseline" id="e8T-Q1-zsw"/>
                                             <constraint firstAttribute="bottom" secondItem="NcJ-fY-tUf" secondAttribute="bottom" id="nCF-RR-CaM"/>
-                                            <constraint firstAttribute="trailing" secondItem="Ll4-6Q-Yds" secondAttribute="trailing" constant="-1" id="sbq-RI-Rty"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ll4-6Q-Yds" secondAttribute="trailing" id="sbq-RI-Rty"/>
                                             <constraint firstAttribute="width" constant="299" id="wEM-5h-aaG"/>
                                         </constraints>
                                     </view>
